--- a/README
+++ b/README
@@ -11,10 +11,19 @@ Config:
 
 Copy config-info.yml into ~/.siriproxy/config.yml and edit as appropriate. 
 
+Usage:
+
+Say things like:
+
+'Set the thermostat to 65 degrees'
+'Set the nest to 65'
+'What's the status of the nest'
+'What is the status of the thermostat'
+
 Caveats:
 
 * Currently only works with a single nest thermostat. I don't have multiple thermostats installed so it's hard to test, but should be relatively easy to adapt.
-* I tried getting Siri to understand 'Check the status of the Nest' but it kept saying it couldn't look up flight information. 
+* I tried getting Siri to understand 'Check the status of the Nest' but it kept saying it couldn't look up flight information. This seems to be sporadic because sometimes Siri reads 'Nest' as 'next'
 
 To Do:
 
